--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "magic-portfolio-for-next-js": "git+https://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@github.com/Lukaszlub/magic-portfolio-for-next-js.git",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+  "react": "19.0.0",
+  "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
